# N-storage

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
movement/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
movement/migrations/: 0001_initial.py
nstorage/: asgi.py  settings.py  urls.py  wsgi.py
reports/: urls.py  views.py
reports/templates/: base.html  hist.html  index.html  storages.html  technics.html
scripts/: create_and_load_data.py
static/: style.css
storages/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
storages/migrations/: 0001_initial.py  0002_technic_country.py
