[tool.poetry]
name = "n-storage"
version = "0.1.0"
description = ""
authors = ["danilu <danilu2537@gmail.com>"]
readme = "README.md"
packages = [{ include = "n_storage" }]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
django = "^4.2.6"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
envparse = "^0.2.0"
plotly = "^5.17.0"
pandas = "^2.1.1"
drf-spectacular = "^0.26.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
faker = "^19.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
skip-magic-trailing-comma = true
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | migrations
)/
'''

[tool.ruff]
select = ["B", "E", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    'migrations',
    '.mypy_cache',
]

line-length = 88
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88
combine_as_imports = true
combine_star = true
skip_glob = '''
  .git,
  .mypy_cache,
  .venv,
  migrations
'''
